Fix profile page flexbox - set spacing to 100% of main

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -121,7 +121,7 @@ much content on the page */
 #forum-heading-section {
   height: 350px;
 }
-
+ 
 #search-heading-section div,
 #tickets-heading-container,
 #forum-heading-container,
@@ -671,6 +671,18 @@ span.vote-counter {
 }
 
 /* MEDIA QUERIES */
+  
+@media only screen and (min-width: 992px) {
+  
+  /* Set profile page row heights on large and xl screens only */
+  #first-row {
+    height: 200px;
+  }
+  
+  #second-row {
+    height: calc(100%  - 200px);
+  }
+}
 
 @media only screen and (max-width: 700px) {
   
